Add comment for myself to pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
 log_cli = true
+# Maybe we need to skip stdout capturing at some point if we add tests that test
+#  functionality that relies on it
