Fixed linter and fixed linter errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,5 @@ test=pytest
 
 [tool:pytest]
 addopts = --pylint --pylint-rcfile=./pylintrc --cov=mlwhatif --cov-report=xml
+# Maybe we need to skip stdout capturing at some point if we add tests that test
+#  functionality that relies on it
