--- a/.pylintrc
+++ b/.pylintrc
@@ -196,12 +196,13 @@ never-returning-functions=sys.exit
 
 # The type of string formatting that logging methods do. `old` means using %
 # formatting, `new` is for `{}` formatting.
-logging-format-style=old
+logging-format-style=new
 
 # Logging modules to check that the string format arguments are in logging
 # function parameter format.
 logging-modules=logging
 
+disable=logging-fstring-interpolation,f-string-without-interpolation
 
 [SPELLING]
 
