--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
         env:
           SETUPTOOLS_USE_DISTUTILS: stdlib
         run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade --upgrade-strategy eager ".[dev]"
+          SETUPTOOLS_USE_DISTUTILS=stdlib python -m pip install --upgrade pip
+          SETUPTOOLS_USE_DISTUTILS=stdlib pip install --upgrade --upgrade-strategy eager ".[dev]"
 
       - name: Unit Tests
         run: python -m pytest
